tests/error/self_errors/recursive_self.err
Error: Recursive self annotation (at $FILE:13:18)
   | 
11 | class Foo(Generic[T]):
12 |     @guppy
13 |     def foo(self: "Foo[Self]") -> None:
   |                   ^^^^^^^^^^^ Type of `self` cannot recursively refer to `Self`

Guppy compilation failed due to 1 previous error
